[package]
name = "cmdw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
env_logger = "0.10.0"
clap = { version = "4.1.8", features = ["derive"] }
